--- a/geoWeb/templates/index.html
+++ b/geoWeb/templates/index.html
@@ -3,10 +3,27 @@
   {% leaflet_js %}
   {% leaflet_css %}
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <style>
+
+    .leaflet-container {  /* all maps */
+        width:  100%;
+        height: 100%;
+    }
+
+    #specialbigmap {
+        height: 800px;
+    }
+
+    /* Resize the "display_raw" textbox */
+    .django-leaflet-raw-textarea {
+        width: 100%;
+    }
+
+</style>
 </head>
 
 <body>
-  {% leaflet_map "picines" callback="main_map_init" %}
+  {% leaflet_map "piscines" callback="main_map_init" %}
   <script type="text/javascript">
       function main_map_init (map, options) {
         var dataurl = '{% url "piciinejson" %}'
