--- a/geo_web/templates/index.html
+++ b/geo_web/templates/index.html
@@ -49,23 +49,58 @@
 
         const swimmingpools = '{% url "swimmingpoolsjson" %}'
         $.getJSON(swimmingpools, function (data) {
-            L.geoJson(data, {onEachFeature: onEachFeature}).addTo(swimmingpoolLayer);
+            L.geoJson(data, {
+                onEachFeature: onEachFeature,
+                style: {
+                    fillColor: "#7ed6df",
+                    fillOpacity: 1,
+                    weight: 2,
+                    opacity: 1,
+                    color: 'white',
+                    dashArray: '3',
+                }
+            }).addTo(swimmingpoolLayer);
         });
 
         const locations = '{% url "locationsjson" %}'
         $.getJSON(locations, function (data) {
-            L.geoJson(data, {onEachFeature: onEachFeature}).addTo(locationsLayer);
+            L.geoJson(data, {
+                onEachFeature: onEachFeature,
+                style: style
+            }).addTo(locationsLayer);
         });
 
         const buildings = '{% url "buildingsjson" %}'
         $.getJSON(buildings, function(data) {
-            L.geoJson(data, {onEachFeature: onEachFeature}).addTo(buildingLayer);
+            L.geoJson(data, {
+                onEachFeature: onEachFeature,
+                style: {
+                    fillColor: "#535c68",
+                    fillOpacity: 1,
+                    weight: 2,
+                    opacity: 1,
+                    color: 'white',
+                    dashArray: '3',
+                }
+            }).addTo(buildingLayer);
         });
 
         const campingareas = '{% url "campingareasjson" %}'
         $.getJSON(campingareas, function (data) {
-            L.geoJson(data, {onEachFeature: onEachFeature}).addTo(map);
+            L.geoJson(data, {
+                onEachFeature: onEachFeature,
+                style: {
+                    fillColor: "#f6e58d",
+                    fillOpacity: 1,
+                    weight: 2,
+                    opacity: 1,
+                    color: "#f6e58d"
+                }
+            }).addTo(map);
         });
+
+        //set active layer
+        locationsLayer.addTo(map)
 
         L.control.layers(baseLayers, overlays).addTo(map);
     }
@@ -74,6 +109,20 @@
         if (feature.properties && feature.properties.name) {
             layer.bindPopup(feature.properties.name);
         }
+    }
+
+    function isBusy(bookings){
+        return Math.random() >= 0.4;
+    }
+
+    function style(feature) {
+        return {
+            fillColor: isBusy(feature.properties) ? "#6ab04c" : "#eb4d4b",
+            fillOpacity: 1,
+            weight: 2,
+            opacity: 1,
+            color: '#f6e58d'
+        };
     }
 </script>
 </body>
