fix: change border color of location area

--- a/geo_web/templates/index.html
+++ b/geo_web/templates/index.html
@@ -121,7 +121,8 @@
             fillOpacity: 1,
             weight: 2,
             opacity: 1,
-            color: '#f6e58d'
+            color: 'white',
+            dashArray: '3'
         };
     }
 </script>
