Add booking entity

--- a/geo_web/templates/index.html
+++ b/geo_web/templates/index.html
@@ -83,6 +83,7 @@
                 onEachFeature: onEachFeature,
                 style: style
             }).addTo(locationsLayer);
+            console.log(data);
         });
 
         const buildings = '{% url "buildingsjson" %}'
