--- a/booking/templates/book.html
+++ b/booking/templates/book.html
@@ -1,8 +1,16 @@
-<form action="{% url 'book' %}" method="post">
+{# Load the tag library #}
+{% load bootstrap4 %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
+
+<form action="{% url 'book' %}" method="post" class="form">
     {% csrf_token %}
     <input type="hidden" name="" value="{{ location_id }}">
-    {{ form }}
+    {% bootstrap_form form %}
     <input type="submit" value="Submit">
-
-    {{ location_id }}
 </form>
