--- a/geofeatures/templates/geofeatures.html
+++ b/geofeatures/templates/geofeatures.html
@@ -21,7 +21,6 @@
 <h1>This is a geofeatures catalog</h1>
 <h3>Pools area</h3>
 {% if pools_areas %}
-    {{ pools_areas }}
     <ul>
     {% for area in pools_areas %}
         <li>{{ area }}</li>
@@ -29,5 +28,12 @@
     </ul>
 {% else %}
     <p>No pools are available.</p>
+{% endif %}
+
+<h3>Location 1 area</h3>
+{% if area_1 %}
+    {{ area_1 }}
+{% else %}
+    <p>No area for location 1</p>
 {% endif %}
 </body>
