--- a/booking/templates/book.html
+++ b/booking/templates/book.html
@@ -10,7 +10,7 @@
 
 <form action="{% url 'book' %}" method="post" class="form">
     {% csrf_token %}
-    <input type="hidden" name="" value="{{ location_id }}">
+    <input type="hidden" name="location_id" value="{{ location_id }}">
     {% bootstrap_form form %}
     <input type="submit" value="Submit">
 </form>
