--- a/geo_web/templates/index.html
+++ b/geo_web/templates/index.html
@@ -1,4 +1,5 @@
 {% load leaflet_tags %}
+{% load static %}
 <head>
     {% leaflet_js %}
     {% leaflet_css %}
@@ -8,7 +9,12 @@
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <style>
-
+        ul{
+            padding-left: 12px;
+        }
+        ul li{
+            margin: 6px 0px;
+        }
         .leaflet-container { /* all maps */
             width: 100%;
             height: 100%;
@@ -115,15 +121,15 @@
     }
 
     const greenIcon = new L.icon({
-        iconUrl: 'https://leafletjs.com/examples/custom-icons/leaf-green.png',
+        iconUrl: "{% static '/tree_w40.png' %}",
         iconSize: [19, 47], // size of the icon
         iconAnchor: [11, 47], // point of the icon which will correspond to marker's location
         popupAnchor: [-3, -76] // point from which the popup should open relative to the iconAnchor
     });
 
-    function main_map_init(map, options) {
+    async function main_map_init(map, options) {
         const campingareas = '{% url "campingareasjson" %}'
-        $.getJSON(campingareas, function (data) {
+        await $.getJSON(campingareas, function (data) {
             L.geoJson(data, {
                 onEachFeature: onEachFeature,
                 style: {
@@ -131,25 +137,29 @@
                     fillOpacity: 1,
                     weight: 2,
                     opacity: 1,
-                    color: "#f6e58d"
+                    color: "#f6e58d",
+                    zIndex:10
                 }
             }).addTo(map);
         });
 
         const trees = '{% url "treesjson" %}'
-        $.getJSON(trees, function (data) {
+        await $.getJSON(trees, function (data) {
             L.geoJson(data, {
                 onEachFeature: onEachFeature,
                 pointToLayer: function (feature, latlng) {
                     return L.marker(latlng, {
                         icon: greenIcon
                     })
+                },
+                style:{
+                    zIndex:1000
                 }
             }).addTo(treesLayer);
         })
 
         const swimmingpools = '{% url "swimmingpoolsjson" %}'
-        $.getJSON(swimmingpools, function (data) {
+        await $.getJSON(swimmingpools, function (data) {
             L.geoJson(data, {
                 onEachFeature: onEachFeature,
                 style: {
@@ -159,12 +169,13 @@
                     opacity: 1,
                     color: 'white',
                     dashArray: '3',
+                    zIndex:1000
                 }
             }).addTo(swimmingpoolLayer);
         });
 
         const freelocations = '{% url "freelocationsjson" %}'
-        $.getJSON(freelocations, function (data) {
+        await $.getJSON(freelocations, function (data) {
             L.geoJson(data, {
                 onEachFeature: onEachFeatureLocation,
                 style: {
@@ -174,13 +185,13 @@
                     opacity: 1,
                     color: 'white',
                     dashArray: '3',
-                    zIndex: 1000
+                    zIndex: 900
                 }
             }).addTo(freelocationsLayer);
         });
 
         const busylocations = '{% url "busylocationsjson" %}'
-        $.getJSON(busylocations, function (data) {
+        await $.getJSON(busylocations, function (data) {
             L.geoJson(data, {
                 onEachFeature: onEachFeatureLocation,
                 style: {
@@ -190,31 +201,34 @@
                     opacity: 1,
                     color: 'white',
                     dashArray: '3',
-                    zIndex: 10
+                    zIndex: 900
                 }
             }).addTo(busylocationsLayer);
         });
 
 
-
         const buildings = '{% url "buildingsjson" %}'
-        $.getJSON(buildings, function (data) {
+        await $.getJSON(buildings, function (data) {
             L.geoJson(data, {
                 onEachFeature: onEachFeature,
                 style: {
-                    fillColor: "#535c68",
+                    fillColor: 'darkblue',
                     fillOpacity: 1,
-                    weight: 2,
+                    stroke:0,
                     opacity: 1,
-                    color: 'white',
-                    dashArray: '3',
+                    zIndex:2000
                 }
-            }).addTo(buildingLayer);
+            }).addTo(buildingLayer)
+            .bringToFront();
         });
 
         //set active layer
         freelocationsLayer.addTo(map)
         busylocationsLayer.addTo(map)
+        treesLayer.addTo(map)
+        swimmingpoolLayer.addTo(map)
+        buildingLayer.addTo(map)
+
 
         L.control.layers(baseLayers, overlays).addTo(map);
 
@@ -247,19 +261,6 @@
         content += '<div>' + getExtraInfo(location.properties.pk) + '</div>'
         return content
     }
-
-
-{#    function onEachFeatureLocation(feature, layer) {#}
-{#    layer.on(#}
-{#        'click', function (e) {#}
-{#            $.getJSON('api/locations/' + feature.properties.pk, function (data) {#}
-{#                $('#locationModalTitle').text(data.name)#}
-{#                $('#area').text(data.area)#}
-{#                $('#link').attr("href", data.href)#}
-{#                $('#locationModal').modal('show')#}
-{#            });#}
-{#        }#}
-{#    );#}
 
 
     function getExtraInfo(id){
